--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^4.5.0",
+    "@skeletonlabs/skeleton-svelte": "^4.5.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.17",
     "svelte": "^5.43.8",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.4"
   }
 }
