--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "svelte": "^5.43.8",
+    "svelte-check": "^4.3.4",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   }
 }
