--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4",
+    "vite": "^7.2.4"
   }
 }
